tests/paczka1/small_fuzzy/23871410.err
Error in line 3: qWgGdA3 A252 21,82
Error in line 13: RkjeWAdOh2 A77 69,2
